[gd_scene load_steps=16 format=2]

[ext_resource path="res://players/bots/bot.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/wizard_sprites.tscn" type="PackedScene" id=2]
[ext_resource path="res://pickups/runes/ice.png" type="Texture" id=3]
[ext_resource path="res://pickups/heart.png" type="Texture" id=4]
[ext_resource path="res://levels/game.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/BOMBERMA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://pickups/runes/arcane.png" type="Texture" id=7]
[ext_resource path="res://levels/player_ui.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 239.156 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 239.156 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 320 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 322.039 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 46.5, 20 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="YSort" type="YSort" parent="."]

[node name="Bot" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 96, 76 )

[node name="Boundaries" type="StaticBody2D" parent="."]
position = Vector2( -40, 0 )
collision_layer = 128
collision_mask = 17

[node name="Left" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 44, 234 )
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 676, 238 )
shape = SubResource( 3 )

[node name="Top" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 360, -6 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Bottom" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 360, 475 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HorzLine" type="Line2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( -1, 5 )
scale = Vector2( 0.992272, 1 )
points = PoolVector2Array( 0, 235, 645, 236 )
width = 1.0

[node name="VertLine" type="Line2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( -0.00772798, 0.0123458 )
scale = Vector2( 0.992272, 1.00206 )
points = PoolVector2Array( 322.5, -5, 321.492, 479 )
width = 1.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="P1UI" type="Control" parent="HUD"]
margin_right = 93.0
margin_bottom = 41.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HUD/P1UI"]
margin_right = 93.0
margin_bottom = 41.0
color = Color( 0, 0, 0, 0.25098 )

[node name="UIArea" type="Area2D" parent="HUD/P1UI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/P1UI/UIArea"]
position = Vector2( 46.5, 20 )
shape = SubResource( 8 )

[node name="Portrait" type="Control" parent="HUD/P1UI"]
margin_right = 41.0
margin_bottom = 41.0
rect_clip_content = true

[node name="WizardSprites" parent="HUD/P1UI/Portrait" instance=ExtResource( 2 )]
position = Vector2( 22, 10 )
scale = Vector2( 3, 3 )

[node name="Health1" type="TextureRect" parent="HUD/P1UI"]
margin_left = 39.0
margin_top = -3.0
margin_right = 103.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Health2" type="TextureRect" parent="HUD/P1UI"]
margin_left = 65.0
margin_top = -3.0
margin_right = 129.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Element1" type="TextureRect" parent="HUD/P1UI"]
margin_left = 40.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Element2" type="TextureRect" parent="HUD/P1UI"]
margin_left = 66.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="P2UI" type="Control" parent="HUD"]
margin_left = 547.0
margin_right = 640.0
margin_bottom = 41.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HUD/P2UI"]
margin_right = 93.0
margin_bottom = 41.0
color = Color( 0, 0, 0, 0.25098 )

[node name="UIArea" type="Area2D" parent="HUD/P2UI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/P2UI/UIArea"]
position = Vector2( 46.5, 20 )
shape = SubResource( 8 )

[node name="Portrait" type="Control" parent="HUD/P2UI"]
margin_left = 52.0
margin_right = 93.0
margin_bottom = 41.0
rect_clip_content = true

[node name="WizardSprites" parent="HUD/P2UI/Portrait" instance=ExtResource( 2 )]
position = Vector2( 22, 10 )
scale = Vector2( 3, 3 )
frame = 0
number = "2"

[node name="Health1" type="TextureRect" parent="HUD/P2UI"]
margin_left = -5.0
margin_top = -3.0
margin_right = 59.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Health2" type="TextureRect" parent="HUD/P2UI"]
margin_left = 23.0
margin_top = -3.0
margin_right = 87.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Element1" type="TextureRect" parent="HUD/P2UI"]
margin_left = -4.0
margin_top = 16.0
margin_right = 60.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Element2" type="TextureRect" parent="HUD/P2UI"]
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="P3UI" type="Control" parent="HUD"]
margin_top = 439.0
margin_right = 93.0
margin_bottom = 480.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HUD/P3UI"]
margin_right = 93.0
margin_bottom = 41.0
color = Color( 0, 0, 0, 0.25098 )

[node name="UIArea" type="Area2D" parent="HUD/P3UI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/P3UI/UIArea"]
position = Vector2( 46.5, 20 )
shape = SubResource( 8 )

[node name="Portrait" type="Control" parent="HUD/P3UI"]
margin_right = 41.0
margin_bottom = 41.0
rect_clip_content = true

[node name="WizardSprites" parent="HUD/P3UI/Portrait" instance=ExtResource( 2 )]
position = Vector2( 22, 10 )
scale = Vector2( 3, 3 )
number = "3"

[node name="Health1" type="TextureRect" parent="HUD/P3UI"]
margin_left = 39.0
margin_top = -3.0
margin_right = 103.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Health2" type="TextureRect" parent="HUD/P3UI"]
margin_left = 65.0
margin_top = -3.0
margin_right = 129.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Element1" type="TextureRect" parent="HUD/P3UI"]
margin_left = 40.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Element2" type="TextureRect" parent="HUD/P3UI"]
margin_left = 66.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="P4UI" type="Control" parent="HUD"]
margin_left = 547.0
margin_top = 439.0
margin_right = 640.0
margin_bottom = 480.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HUD/P4UI"]
margin_right = 93.0
margin_bottom = 41.0
color = Color( 0, 0, 0, 0.25098 )

[node name="UIArea" type="Area2D" parent="HUD/P4UI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/P4UI/UIArea"]
position = Vector2( 46.5, 20 )
shape = SubResource( 8 )

[node name="Portrait" type="Control" parent="HUD/P4UI"]
margin_left = 52.0
margin_right = 93.0
margin_bottom = 41.0
rect_clip_content = true

[node name="WizardSprites" parent="HUD/P4UI/Portrait" instance=ExtResource( 2 )]
position = Vector2( 22, 10 )
scale = Vector2( 3, 3 )
frame = 0
number = "4"

[node name="Health1" type="TextureRect" parent="HUD/P4UI"]
margin_left = -5.0
margin_top = -3.0
margin_right = 59.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Health2" type="TextureRect" parent="HUD/P4UI"]
margin_left = 23.0
margin_top = -3.0
margin_right = 87.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 4 )

[node name="Element1" type="TextureRect" parent="HUD/P4UI"]
margin_left = -4.0
margin_top = 16.0
margin_right = 60.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Element2" type="TextureRect" parent="HUD/P4UI"]
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="MatchTime" type="RichTextLabel" parent="HUD"]
margin_left = 242.0
margin_top = 21.0
margin_right = 392.0
margin_bottom = 41.0
theme = SubResource( 7 )
bbcode_enabled = true

[node name="Starting1" type="Position2D" parent="."]
position = Vector2( 50, 63 )

[node name="Starting2" type="Position2D" parent="."]
position = Vector2( 595, 64 )

[node name="Starting3" type="Position2D" parent="."]
position = Vector2( 46, 413 )

[node name="Starting4" type="Position2D" parent="."]
position = Vector2( 590, 414 )

[node name="MatchTimer" type="Timer" parent="."]
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="HUD/P1UI/UIArea" to="HUD/P1UI" method="_on_UIArea_body_entered"]
[connection signal="body_exited" from="HUD/P1UI/UIArea" to="HUD/P1UI" method="_on_UIArea_body_exited"]
[connection signal="body_entered" from="HUD/P2UI/UIArea" to="HUD/P2UI" method="_on_UIArea_body_entered"]
[connection signal="body_exited" from="HUD/P2UI/UIArea" to="HUD/P2UI" method="_on_UIArea_body_exited"]
[connection signal="body_entered" from="HUD/P3UI/UIArea" to="HUD/P3UI" method="_on_UIArea_body_entered"]
[connection signal="body_exited" from="HUD/P3UI/UIArea" to="HUD/P3UI" method="_on_UIArea_body_exited"]
[connection signal="body_entered" from="HUD/P4UI/UIArea" to="HUD/P4UI" method="_on_UIArea_body_entered"]
[connection signal="body_exited" from="HUD/P4UI/UIArea" to="HUD/P4UI" method="_on_UIArea_body_exited"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
